# terse.rs

./: Cargo.toml  README.md
src/: cereal.rs  lib.rs  serialize.rs  types.rs
src/models/: act.rs  asset.rs  episode.rs  mod.rs
src/types/: algebraic.rs  mod.rs  rect.rs
