[package]
name = "terse"
version = "0.1.0"
authors = ["andrew <drewtcraft@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
arraystring = "0.3.0"
serde = { version = "1.0.117", features = ["derive"] }
serde_json = "1.0.59"
